--- a/package.json
+++ b/package.json
@@ -43,5 +43,11 @@
     "vite": "^4.4.11",
     "vitest": "^0.34.6",
     "vue-tsc": "^1.8.19"
+  },
+  "lint-staged": {
+    "*.{vue,js,ts,tsx}": [
+      "npm run lint",
+      "npm run format"
+    ]
   }
 }
