--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.16",
     "cypress": "^13.3.1",
+    "daisyui": "^3.9.4",
     "eslint": "^8.49.0",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-vue": "^9.17.0",
